# xfce-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  SPECIAL_CASES.md  xephyr-run.sh
apps/xfce-rs-audio/: Cargo.toml
apps/xfce-rs-audio/src/: lib.rs  main.rs
apps/xfce-rs-desktop/: Cargo.toml
apps/xfce-rs-desktop/src/: icons.rs
apps/xfce-rs-navigator/: Cargo.toml
apps/xfce-rs-navigator/src/: app_finder.rs  main.rs
apps/xfce-rs-panel/: Cargo.toml  README.md  RUN.md  SETTINGS.md
apps/xfce-rs-panel/src/: main.rs  plugin_manager.rs  settings_app.rs
apps/xfce-rs-thunar/: Cargo.toml
apps/xfce-rs-thunar/src/: file_operations.rs  lib.rs
apps/xfce-rs-wm/: Cargo.toml  health-check.sh  run-xephyr-xfce.sh  test-interaction-fix.sh
apps/xfce-rs-wm/src/: main.rs
apps/xfce-rs-wm/src/core/: context.rs
apps/xfce-rs-wm/src/ewmh/: atoms.rs  setup.rs
apps/xfce-rs-wm/src/window/: client.rs  compositor.rs  draw.rs  frame.rs  manager.rs  mod.rs  placement.rs  settings.rs
audio/: Cargo.toml
audio/src/: devices.rs  lib.rs  main.rs  mpris.rs  notifications.rs  pulseaudio.rs  sink_inputs.rs
crates/xfce-rs-appfinder/: Cargo.toml
crates/xfce-rs-appfinder/src/: launcher.rs  lib.rs  main.rs  search.rs
crates/xfce-rs-appfinder/src-tauri/: Cargo.toml  tauri.conf.json
crates/xfce-rs-appfinder/src-tauri/src/: main.rs
crates/xfce-rs-appfinder/ui/: app.js  index.html  styles.css
crates/xfce-rs-config/: Cargo.toml
crates/xfce-rs-config/src/: config.rs  lib.rs
crates/xfce-rs-desktop/: Cargo.toml
crates/xfce-rs-desktop/src/: desktop.rs  lib.rs  wallpaper.rs
crates/xfce-rs-ipc/: Cargo.toml
crates/xfce-rs-ipc/src/: lib.rs
crates/xfce-rs-menu/: Cargo.toml
crates/xfce-rs-menu/src/: lib.rs
crates/xfce-rs-panel/: Cargo.toml
crates/xfce-rs-panel/src/: lib.rs  panel.rs  plugin.rs  widgets.rs
crates/xfce-rs-thunar/: Cargo.toml
crates/xfce-rs-thunar/src/: directory_view.rs  file_manager.rs
crates/xfce-rs-ui/: Cargo.toml
crates/xfce-rs-ui/src/: lib.rs
crates/xfce-rs-utils/: Cargo.toml
crates/xfce-rs-utils/src/: lib.rs
crates/xfce-rs-wm/: Cargo.toml
crates/xfce-rs-wm/src/: compositor.rs  lib.rs  theme.rs  window.rs  workspace.rs
navigator/: Cargo.toml
packaging/: PKGBUILD  xfce-rs-session  xfce-rs.desktop
panel/: Cargo.toml
panel-plugins/: QUICKSTART.md  README.md  run-clock.sh  run-separator.sh  run-showdesktop.sh
panel-plugins/clock/: Cargo.toml
panel-plugins/clock/src/: main.rs
panel-plugins/separator/: Cargo.toml
panel-plugins/separator/src/: main.rs
panel-plugins/showdesktop/: Cargo.toml
panel-plugins/showdesktop/src/: main.rs
panel/src/: main.rs  plugin_manager.rs  plugin_slot.rs  settings.rs  settings_app.rs
src/: hotkey_daemon.rs  main.rs
tools/: install-session.sh
xfwm4-rs/: Cargo.toml  quick-test.sh  run-xephyr-xfce.sh  test-interaction.sh
xfwm4-rs/src/: main.rs
xfwm4-rs/src/ewmh/: atoms.rs  mod.rs
xfwm4-rs/src/window/: client.rs  compositor.rs  cursors.rs  draw.rs  error.rs  frame.rs  manager.rs  mod.rs  session.rs  settings.rs
