[package]
name = "navigator"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Navigator for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/xfce-rs"
keywords = ["xfce", "app-finder", "launcher", "search"]
categories = ["gui"]

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio", "image", "svg"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
fuzzy-matcher = "0.3"
regex = "1.10"
xdg = "2.5"
freedesktop-desktop-entry = "0.7"
walkdir = "2.5"
dirs = "5.0"
linicon = "2.3"
rusqlite = "0.31"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"