[workspace]
resolver = "2"

members = [
    "audio",
    "navigator",
    "xfwm4-rs",
    "panel",
    "panel-plugins/clock",
    "panel-plugins/separator",
    "panel-plugins/showdesktop",
    "xfce4-settings",
    "pulsectl-rs",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
config = "0.14"
uuid = { version = "1.6", features = ["v4", "serde"] }
zbus = "4.0"
notify = "6.0"
walkdir = "2.5"
sysinfo = "0.30"
raqote = "0.8"
png = "0.17"
svg = "0.15"
regex = "1.10"
smithay = "0.3"

# Native GUI & Performance
iced = { version = "0.14", features = ["canvas", "tokio", "image", "svg"] }
winit = "0.30"
wgpu = "0.19"
freedesktop-desktop-entry = "0.7"
fuzzy-matcher = "0.3"
dirs = "5.0"
xdg = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
linicon = "2.3"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
rusqlite = "0.31"
chrono = "0.4"
pulsectl = { path = "pulsectl-rs", package = "pulsectl-rs" }
libpulse-binding = "2.28"
libpulse-glib-binding = "2.28"
pulse = { package = "libpulse-binding", version = "2.28" }
