[package]
name = "audio"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Modern audio control plugin for XFCE.rs with Spotify-style UI"
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/xfce-rs"
keywords = ["xfce", "audio", "pulseaudio", "mpris", "media"]
categories = ["gui"]

[[bin]]
name = "audio"
path = "src/main.rs"

[dependencies]
iced = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
zbus = { workspace = true }
notify = { workspace = true }
notify-rust = "4.10"
once_cell = "1.19"
futures-util = "0.3"

# PulseAudio bindings
libpulse-binding = "2.28"
libpulse-glib-binding = "2.28"
pulsectl = { path = "../pulsectl-rs", package = "pulsectl-rs" }

    # For MPRIS2 support
    mpris = "2.0"

# xfce-rs-* crates
xfce-rs-ui = { path = "../area/xfce-rs/crates/xfce-rs-ui" }

[dev-dependencies]
tempfile = "3.8"

