[package]
name = "xfce-rs-panel"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Panel system for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/xfce-rs"
keywords = ["xfce", "panel", "desktop"]
categories = ["gui"]

[[bin]]
name = "xfce-rs-panel"
path = "src/main.rs"

[dependencies]
iced = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
zbus = { workspace = true }
freedesktop-desktop-entry = { workspace = true }

xfce-rs-ui = { path = "../area/xfce-rs/crates/xfce-rs-ui" }
xfce-rs-config = { path = "../area/xfce-rs/crates/xfce-rs-config" }
xfce-rs-utils = { path = "../area/xfce-rs/crates/xfce-rs-utils" }
