[package]
name = "xfwm4-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
x11rb = { workspace = true, features = ["allow-unsafe-code", "extra-traits", "resource_manager", "cursor", "randr", "composite", "render", "xfixes", "shape", "damage"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures-util = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
