[package]
name = "xfce-rs-appfinder"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Application finder for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/xfce-rs"
keywords = ["xfce", "app-finder", "launcher", "search"]
categories = ["gui"]

[dependencies]
iced = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
fuzzy-matcher = { workspace = true }
regex = { workspace = true }
xdg = { workspace = true }
freedesktop-desktop-entry = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }

xfce-rs-config = { path = "../xfce-rs-config" }
xfce-rs-utils = { path = "../xfce-rs-utils" }
xfce-rs-ui = { path = "../xfce-rs-ui" }
xfce-rs-menu = { path = "../xfce-rs-menu" }

[dev-dependencies]
tempfile = "3.8"