[package]
name = "xfce-rs-config"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Configuration system for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/ohsalmeron/xfce-rs"
keywords = ["xfce", "config", "desktop", "settings"]
categories = ["config"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
uuid = { workspace = true }

dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"