[package]
name = "xfce-rs-ipc"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Inter-process communication for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/xfce-rs"
keywords = ["xfce", "ipc", "dbus", "communication"]
categories = ["os::unix-apis"]

[dependencies]
zbus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"