[package]
name = "xfce-rs-panel"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Panel system for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/xfce-rs"
keywords = ["xfce", "panel", "taskbar", "plugins"]
categories = ["gui"]

[dependencies]
iced = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
libloading = "0.8"

xfce-rs-config = { path = "../xfce-rs-config" }
xfce-rs-utils = { path = "../xfce-rs-utils" }
xfce-rs-ui = { path = "../xfce-rs-ui" }

[dev-dependencies]
tempfile = "3.8"