[package]
name = "xfce-rs-thunar"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "File manager for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/xfce-rs"
keywords = ["xfce", "file-manager", "thunar", "explorer"]
categories = ["filesystem", "gui"]

[dependencies]
iced = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
fuzzy-matcher = "0.3"
xdg = "2.5"

xfce-rs-config = { path = "../xfce-rs-config" }
xfce-rs-utils = { path = "../xfce-rs-utils" }
xfce-rs-ui = { path = "../xfce-rs-ui" }
xfce-rs-menu = { path = "../xfce-rs-menu" }

[dev-dependencies]
tempfile = "3.8"