[package]
name = "xfce-rs-ui"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "UI components and theming for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/ohsalmeron/xfce-rs"
keywords = ["xfce", "ui", "widgets", "theme"]
categories = ["gui"]

[dependencies]
iced = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
raqote = { workspace = true }
png = { workspace = true }
svg = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }