[package]
name = "xfce-rs-wm"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Window manager for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/your-username/xfce-rs"
keywords = ["xfce", "window-manager", "compositor", "wayland"]
categories = ["gui"]

[dependencies]
smithay = { workspace = true }
winit = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
raqote = { workspace = true }
png = { workspace = true }

xfce-rs-config = { path = "../xfce-rs-config" }
xfce-rs-utils = { path = "../xfce-rs-utils" }
xfce-rs-ui = { path = "../xfce-rs-ui" }

[dev-dependencies]
tempfile = "3.8"