[package]
name = "xfce-rs-separator"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Separator plugin for XFCE.rs panel"
license = "GPL-2.0-or-later"
repository = "https://github.com/ohsalmeron/xfce-rs"
keywords = ["xfce", "panel", "separator"]
categories = ["gui"]

[[bin]]
name = "xfce-rs-separator"
path = "src/main.rs"

[dependencies]
iced = { workspace = true }
xfce-rs-ui = { path = "../../crates/xfce-rs-ui" }
