[package]
name = "xfce-appfinder"
version = "0.1.0"
edition = "2021"
authors = ["XFCE.rs Contributors"]
description = "Application finder for XFCE.rs desktop environment"
license = "GPL-2.0-or-later"
repository = "https://github.com/ohsalmeron/xfce-rs"

# Tauri requires a binary target
[[bin]]
name = "xfce-appfinder"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
freedesktop-desktop-entry = "0.7"
fuzzy-matcher = "0.3"
walkdir = "2.5"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
